--- a/README
+++ b/README
@@ -2,6 +2,7 @@
 
 Authors: Andy Luong, Anthony Phimmasone, Brian Justice, Alex Lundin
 
+Synopsis
 We are a programming team working for Bicycle Parts Distributorship. 
 BPD has a warehouse full of bicycle parts. 
 The code and underlying data structures from Projects 1 and 2 apply to Project 3, but we will have to modify them. 
